tests/syntax/bad/testfile-semicolon-1.scala
class A { def foo(){} def bar(){} }
object Main { def main(args: Array[String]) { } }
